Corrected broken links for functioning demo

--- a/globomantics-asset-bundle/web-pages/index.html
+++ b/globomantics-asset-bundle/web-pages/index.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="brands.html">Brands</a>
+          <a class="nav-link" href="#">Brands</a>
         </li>
 
         <li class="nav-item">
@@ -53,7 +53,7 @@
           <a class="nav-link disabled" href="media.html">Media</a>
         </li>
   	  <li class="nav-item">
-          <a class="nav-link disabled" href="support.html">Support</a>
+          <a class="nav-link disabled" href="#">Support</a>
         </li>
   	  </ul>
   </ul>
@@ -78,7 +78,7 @@
           <a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="brands.html">Brands</a>
+          <a class="nav-link" href="#">Brands</a>
         </li>
 
         <li class="nav-item">
@@ -89,7 +89,7 @@
           <a class="nav-link disabled" href="media.html">Media</a>
         </li>
   	  <li class="nav-item">
-          <a class="nav-link disabled" href="support.html">Support</a>
+          <a class="nav-link disabled" href="#">Support</a>
         </li>
 
       </ul>
@@ -185,10 +185,10 @@ there in the future</p>
 <ul class="quick-links col-md-4 col-xs-6">
 
 <li><a href="our-story.html">Our Story</a></li>
-<li><a href="brands.html">Brands</a></li>
+<li><a href="#">Brands</a></li>
 <li><a href="robotics.html">Robotics</a></li>
 <li><a href="media.html">Media</a></li>
-<li><a href="support.html">Support</a></li>
+<li><a href="#">Support</a></li>
 </ul>
 <ul class="quick-links second-row col-md-4 col-xs-6">
 
