--- a/globomantics-asset-bundle/web-pages/robotics.html
+++ b/globomantics-asset-bundle/web-pages/robotics.html
@@ -43,7 +43,7 @@
           <a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="brands.html">Brands</a>
+          <a class="nav-link" href="#">Brands</a>
         </li>
 
         <li class="nav-item">
@@ -54,7 +54,7 @@
           <a class="nav-link disabled" href="media.html">Media</a>
         </li>
   	  <li class="nav-item">
-          <a class="nav-link disabled" href="support.html">Support</a>
+          <a class="nav-link disabled" href="#">Support</a>
         </li>
   	  </ul>
   </ul>
@@ -79,7 +79,7 @@
           <a class="nav-link" href="our-story.html">Our story<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="brands.html">Brands</a>
+          <a class="nav-link" href="#">Brands</a>
         </li>
 
         <li class="nav-item">
@@ -90,7 +90,7 @@
           <a class="nav-link disabled" href="media.html">Media</a>
         </li>
   	  <li class="nav-item">
-          <a class="nav-link disabled" href="support.html">Support</a>
+          <a class="nav-link disabled" href="#">Support</a>
         </li>
 
       </ul>
@@ -207,10 +207,10 @@ No matter the applications, all Globomantics Mark 1 and U line robots are hard c
 <ul class="quick-links col-md-4 col-xs-6">
 
 <li><a href="our-story.html">Our Story</a></li>
-<li><a href="brands.html">Brands</a></li>
+<li><a href="#">Brands</a></li>
 <li><a href="robotics.html">Robotics</a></li>
 <li><a href="media.html">Media</a></li>
-<li><a href="support.html">Support</a></li>
+<li><a href="#">Support</a></li>
 </ul>
 <ul class="quick-links second-row col-md-4 col-xs-6">
 
